k8s/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: fe
  name: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fe
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (HEAD)
      labels:
        io.kompose.service: fe
    spec:
      containers:
        - image: collaborativedhs/dafne:fe-4.1.1
          name: fe
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/local/apache2/htdocs/assets/config
              name: fe-config
              readOnly: true
      hostname: frontend
      restartPolicy: Always
      volumes:
        - name: fe-config
          configMap:
            name: fe-config
