k8s/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (HEAD)
  labels:
    io.kompose.service: be
  name: be
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 2000
  selector:
    io.kompose.service: be
